--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -50,6 +50,11 @@ body {
 	margin: 0;
 }
 
+button {
+	background: none;
+	border-width: 0;
+}
+
 .block {
 	display: block;
 }
@@ -138,6 +143,7 @@ section {
 		font-size: 0.8em;
 		text-align: center;
 		text-transform: uppercase;
+
 	}
 
 	a:hover {
@@ -147,49 +153,49 @@ section {
 	.site-name {
 		font-size: 1.5em;
 	}
+}
 
-	#jw-banner {
-		margin: 0 auto;
-		max-width: 992px;
-		padding: 0;
-		padding-top: 60px;
+#jw-banner {
+	margin: 0 auto;
+	max-width: 992px;
+	padding: 60px 2% 0 2%;
+}
+
+#navigation > ul {
+	float: right;
+}
+
+#navigation > ul > li {
+	display: inline-block;
+	float: left;
+	margin: 0 10px;
+	position: relative;
+
+	ul {
+		display: none;
 	}
 
-	#navigation > ul {
-		float: right;
-	}
+	.child-menu {
+		background: $theme-bg-dropdown;
+		left: 0;
+		margin-left: 0;
+		padding: 0 15px 10px 15px;
+		position: absolute;
+		top: 20px;
+		width: 220px;
+		z-index: 200;
 
-	#navigation > ul > li {
-		display: inline-block;
-		float: left;
-		margin: 0 10px;
-		position: relative;
-
-		ul {
-			display: none;
+		li {
+			padding-top: 10px;
 		}
-
-		.child-menu {
-			background: $theme-bg-dropdown;
-			left: 0;
-			margin-left: 0;
-			padding: 0 15px 10px 15px;
-			position: absolute;
-			top: 20px;
-			width: 220px;
-			z-index: 200;
-
-			li {
-				padding-top: 10px;
-			}
-		}
-	}
-
-	#sign-in div {
-		display: inherit;
-		white-space: nowrap;
 	}
 }
+
+#sign-in div {
+	display: inherit;
+	white-space: nowrap;
+}
+
 
 .theme-container {
 	margin: 0 5%;
@@ -318,9 +324,9 @@ section {
 	background: transparent;
 	border-width: 0;
 	color: $theme-base;
-	margin: 20% 20%;
+	margin: 20% 10%;
 	position: absolute;
-	width: 320px;
+	width: 450px;
 
 	h2 {
 		content: "";
@@ -341,6 +347,10 @@ section {
 		color: $theme-base;
 		font-size: 1.5em;
 	}
+}
+
+#portlet_com_liferay_login_web_portlet_LoginPortlet {
+
 }
 
 @media screen and (min-width: 400px) {
@@ -364,20 +374,8 @@ section {
 		font-size: 1.3em;
 	}
 
-	h3 {
+	h3, h4, h5, h6 {
 		font-size: 1.2em;
-	}
-
-	h4 {
-		font-size: 1.2em;
-	}
-
-	h5 {
-		font-size: 1.2em;
-	}
-
-	h6 {
-		font-size: 1.2em
 	}
 
 	p {
@@ -391,11 +389,29 @@ section {
 }
 
 @media screen and (max-width: 991px) {
+	#banner a.jw-nav-bar-toggle {
+		background-color: transparent;
+		border-radius: 0;
+		border-width: 0;
+		color: $theme-base;
+		cursor: pointer;
+		display: block;
+		font-size: 3em;
+		line-height: 0.4;
+		margin: 0 15px 5% 15px;
+		padding: 0;
+		text-align: left;
+
+		&:hover {
+			color: $theme-base-light
+		}
+	}
+
 	#jw-nav-bar {
 		-moz-transition: all 0.5s ease-in-out;
 		-o-transition: all 0.5s ease-in-out;
 		-webkit-transition: all 0.5s ease-in-out;
-		background: #FFF;
+		background: $theme-bg-light-2;
 		bottom: 0;
 		box-sizing: border-box;
 		display: block !important;
@@ -403,7 +419,7 @@ section {
 		overflow-y: auto !important;
 		padding: 20px 0;
 		position: fixed;
-		right: -250px; /*set to -250px when ready to hide */
+		right: -250px;
 		top: 0;
 		transition: all 0.5s ease-in-out;
 		width: 250px;
@@ -435,40 +451,53 @@ section {
 			background: $theme-base-light;
 		}
 
-		a.jw-nav-bar-toggle-close {
+		.jw-nav-bar-toggle-close {
 			font-size: 3em;
 			line-height: 0;
 		}
+
+		li ul.child-menu {
+			background: $theme-bg-light-2;
+			display: none;
+			position: relative;
+			padding-left: 0;
+			padding-right: 0;
+
+		 	ul {
+		 		display: hidden;
+		 	}
+		}
+
+		li > ul {
+			position: relative;
+		}
+
+		li button.child-menu-toggle {
+			cursor: pointer;
+			font-size: inherit;
+			line-height: 1.3;
+			margin: 0 5%;
+			padding: 0 5%;
+			color: inherit;
+		}
+
+		ul.child-menu-open {
+			display: block !important;
+			position: relative !important;
+			background: inherit;
+			margin: 0;
+			padding: 0;
+		}
+
+		button.child-menu-toggle-open {
+			transform: rotate(90deg);
+
+		}
+
 	}
 
-	.jw-nav-bar-toggle {
-		background-color: transparent;
-		border-radius: 0;
-		border-width: 0;
-		display: block;
-		margin: 0 15px;
-		padding: 0;
-	}
-
-	.toggle-icon-bar {
-		background: $theme-base;
-		border-radius: 1px;
-		display: block;
-		height: 2px;
-		margin: 5px auto;
-		width: 22px;
-	}
-
-	a.jw-nav-bar-toggle:focus {
-		display: none;
-	}
-
-	a.jw-nav-bar-toggle {
-		display: block;
-	}
-
-	#jw-nav-bar:target {
-		right: 0;
+	#navigation > ul > li.selected .child-menu {
+		background-color: $theme-bg-light-2;
 	}
 }
 
@@ -519,6 +548,10 @@ section {
 
 	#navigation ul li.selected a:before {
 		width: 100%;
+	}
+
+	#navigation li button.child-menu-toggle {
+		display: none;
 	}
 
 	.grid-left {
