--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -7,7 +7,7 @@
 
 /* Common Site Variables */
 
-$p-text-color: #777;
+$default-color: #777;
 $theme-base: #DAB485;
 $theme-base-light: #ECD8C0;
 $theme-bg-dark: #131E26;
@@ -17,25 +17,23 @@ $theme-bg-light-1: #EAEAEA;
 $theme-bg-light-2: #F6F6F6;
 $theme-title-text: #000;
 
-/* Entire Page Styles */
-
 @font-face {
-	font-family: "gotham_boldregular";
-	src: url(fonts/GothamBoldRegular.ttf) format("truetype");
+	font-family: 'gotham_boldregular';
+	src: url(fonts/GothamBoldRegular.ttf) format('truetype');
 }
 
 @font-face {
-	font-family: "gotham_lightregular";
-	src: url(fonts/GothamLightRegular.otf) format("truetype");
+	font-family: 'gotham_lightregular';
+	src: url(fonts/GothamLightRegular.otf) format('truetype');
 }
 
 @font-face {
-	font-family: "gotham_bookregular";
-	src: url(fonts/GothamBookRegular.otf) format("truetype");
+	font-family: 'gotham_bookregular';
+	src: url(fonts/GothamBookRegular.otf) format('truetype');
 }
 
 html {
-	font-family: "gotham_lightregular", sans-serif;
+	font-family: 'gotham_lightregular', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
 }
 
 ::selection {
@@ -48,10 +46,22 @@ html {
 }
 
 body {
-	font-family: "gotham_bookregular";
+	font-family: 'gotham_bookregular', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
 	font-size: 15px;
 	line-height: 1.4;
 	margin: 0;
+
+	.btn-primary {
+		background-color: $theme-base;
+		border-color: $theme-base-light;
+		color: #FFF;
+
+		&:hover {
+			background-color: $theme-base-light;
+			border-color: $theme-base;
+			color: $default-color;
+		}
+	}
 }
 
 button {
@@ -68,7 +78,8 @@ button {
 }
 
 .row {
-	margin: 1em 0;
+	margin-left: 0;
+	margin-right: 0;
 	width: 100% !important;
 }
 
@@ -76,13 +87,13 @@ button {
 	text-transform: uppercase;
 }
 
-a:active, a:hover {
-	-moz-transition: all 0.3s ease-out;
-	-o-transition: all 0.3s ease-out;
-	-webkit-transition: all 0.3s ease-out;
-	outline: 0;
-	text-decoration: none;
-	transition: all 0.3s ease-out;
+a {
+	&:active, &:hover {
+		outline: 0;
+		text-decoration: none;
+
+		@include transition(all 0.3s ease-out);
+	}
 }
 
 p {
@@ -94,17 +105,40 @@ li, ul {
 	list-style: none;
 }
 
+.bg-portlet-dropdown-default  {
+	background-color: #FFF;
+	margin-left: -10px;
+	margin-right: -10px;
+	padding: 20px 10px 30px 10px;
+}
+
 .bg-dark {
-		background-color: $theme-bg-dark;
-		margin: 0;
+	background-color: $theme-bg-dark;
+	margin-left: -10px;
+	margin-right: -10px;
+	padding: 20px 10px 30px 10px;
+
+	h1 {
+		color: #FFF;
 	}
+}
+
+.bg-light {
+	background-color: $theme-bg-light-1;
+	margin-left: -10px;
+	margin-right: -10px;
+	padding: 20px 10px 30px 10px;
+}
+
+.bg-light-2 {
+	background-color: $theme-bg-light-2;
+	margin-left: -10px;
+	margin-right: -10px;
+	padding: 20px 10px 30px 10px;
+}
 
 .control-menu {
 	height: 64px;
-}
-
-.text-center {
-	align-text: center;
 }
 
 #wrapper {
@@ -112,14 +146,49 @@ li, ul {
 	margin-top: -30px;
 	padding: 0;
 	top: 0;
+
+	#themeBanner {
+		margin: 0 auto;
+		max-width: 992px;
+		padding: 60px 2% 0 2%;
+	}
 }
 
 p {
-	color: $p-text-color;
+	color: $default-color;
 }
 
 .portlet-title-text {
 	display: none;
+}
+
+.portlet-content {
+	background: transparent;
+
+	.scheduler-view-agenda-info-container .scheduler-view-agenda-info {
+		color: $theme-base;
+	}
+
+	a {
+		color: $theme-base;
+
+		&.link-button {
+			color: #FFF;
+		}
+
+		&::after {
+			background-color: $theme-base;
+		}
+	}
+}
+
+.yui3-skin-sam .calendar-portlet .yui3-calendar-weekday {
+	color: $theme-base;
+}
+
+.scheduler-view-day-header-day .scheduler-today-hd, .scheduler-view-table-colgrid-today, .scheduler-view-table-data-col-title-today {
+	border-color: $theme-base;
+	color: $theme-base;
 }
 
 section {
@@ -129,12 +198,31 @@ section {
 	width: 100%;
 }
 
-/* End Entire Page Styles */
+div.portlet-column {
+	padding-left: 0;
+	padding-right: 0;
 
-/* Styles for Header */
+	.portlet-body {
+		padding: 0 10px 10px 10px;
+	}
+
+	div.portlet-boundary {
+		margin-left: 0;
+		margin-right: 0;
+
+		div.portlet-content {
+			border-width: 0;
+		}
+
+		div.portlet-content-editable {
+			padding-left: 0;
+			padding-right: 0;
+		}
+	}
+}
 
 #banner {
-	font-family: "gotham_boldregular";
+	font-family: 'gotham_boldregular', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
 	height: 110px;
 	left: 0;
 	position: fixed;
@@ -146,10 +234,10 @@ section {
 		font-size: 0.8em;
 		text-align: center;
 		text-transform: uppercase;
-	}
 
-	a:hover {
-		color: $theme-base;
+		&:hover {
+			color: $theme-base;
+		}
 	}
 
 	.site-name {
@@ -159,25 +247,15 @@ section {
 }
 
 .banner-unscrolled {
-	-moz-transition: all 0.3s ease-out;
-	-o-transition: all 0.3s ease-out;
-	-webkit-transition: all 0.3s ease-out;
 	background-color: transparent;
-	transition: all 0.3s ease-out;
+
+	@include transition(all 0.3s ease-out);
 }
 
 .banner-scrolled {
-	-moz-transition: all 0.3s ease-out;
-	-o-transition: all 0.3s ease-out;
-	-webkit-transition: all 0.3s ease-out;
 	background-color: $theme-bg-dark-transparent;
-	transition: all 0.3s ease-out;
-}
 
-#jw-banner {
-	margin: 0 auto;
-	max-width: 992px;
-	padding: 60px 2% 0 2%;
+	@include transition(all 0.3s ease-out);
 }
 
 #navigation > ul {
@@ -186,35 +264,35 @@ section {
 	.delete-tab {
 		margin-top: -20px;
 	}
-}
 
-#navigation > ul > li {
-	display: inline-block;
-	float: left;
-	margin: 0 10px;
-	position: relative;
+	& > li {
+		display: inline-block;
+		float: left;
+		margin: 0;
+		position: relative;
 
-	ul {
-		display: none;
-	}
+		ul {
+			display: none;
+		}
 
-	.child-menu {
-		background: $theme-bg-dropdown;
-		left: 0;
-		margin-left: 0;
-		padding: 0 15px 10px 15px;
-		position: absolute;
-		top: 20px;
-		width: 220px;
-		z-index: 200;
+		.child-menu {
+			background: $theme-bg-dropdown;
+			left: 0;
+			margin-left: 0;
+			padding: 0 15px 10px 15px;
+			position: absolute;
+			top: 20px;
+			width: 220px;
+			z-index: 200;
 
-		li {
-			padding-top: 10px;
+			li {
+				padding-top: 10px;
+			}
 		}
 	}
 }
 
-#sign-in div {
+#signIn div {
 	display: inherit;
 	white-space: nowrap;
 }
@@ -223,79 +301,89 @@ section {
 	margin: 0 5%;
 }
 
-#company-branding {
+#companyBranding {
 	display: inline-block;
-}
-
-#header .site-name a {
-	color: #FFF;
-	font-size: 1.33em;
-	text-transform: uppercase;
-}
-
-#header .block-menu {
-	display: inline-block;
-	float: right;
 	width: auto;
 }
 
-#header ul.menu {
-	display: block;
-	float: right;
+#header {
+	.site-name a {
+		color: #FFF;
+		font-size: 1.33em;
+		text-transform: uppercase;
+	}
+
+	.block-menu {
+		display: inline-block;
+		float: right;
+		width: auto;
+	}
+
+	ul.menu {
+		display: block;
+		float: right;
+		position: relative;
+	}
+}
+
+.hero {
+	margin: -250px auto 0 auto;
+	max-width: 440px;
 	position: relative;
+	text-align: center;
+	z-index: 10;
+
+	img {
+		max-width: 440px;
+	}
 }
 
 .link-fade {
 	color: $theme-base;
-}
 
-.link-fade:hover {
-	-moz-transition: all 0.3s ease-out;
-	-o-transition: all 0.3s ease-out;
-	-webkit-transition: all 0.3s ease-out;
-	color: $theme-base-light;
-	cursor: pointer;
-	transition: all 0.3s ease-out;
+	&:hover {
+		color: $theme-base-light;
+		cursor: pointer;
+
+		@include transition(all 0.3s ease-out);
+	}
 }
 
 .link-button {
 	background-color: $theme-base;
 	border-radius: 30px;
-	color: #313432 !important;
-	font-family: "gotham_boldregular";
+	color: #313432;
+	font-family: 'gotham_boldregular', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
 	padding: 7px 15px;
+
+	&:hover {
+		background-color: $theme-base-light;
+
+		@include transition(all 0.3s ease-out);
+	}
 }
 
-.link-button:hover {
-	-moz-transition: all 0.3s ease-out;
-	-o-transition: all 0.3s ease-out;
-	-webkit-transition: all 0.3s ease-out;
-	background-color: $theme-base-light;
-	transition: all 0.3s ease-out;
-}
+#background {
+	padding-top: 0;
 
-.jumbotron-picture {
-	background-color: transparent;
-	background-image: url(../images/mountains2.jpg);
-	background-position-x: center;;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: auto;
-	position: relative;
-	top: -15px;
-	width: 100%;
-}
+	.jumbotron-picture {
+		background-color: transparent;
+		background-image: url(../images/mountains_2.jpg);
+		background-position-x: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		height: auto;
+		position: relative;
+		top: -20px;
+		width: 100%;
+	}
 
-.background-box {
-	background-color: $theme-bg-dark-transparent;
-	height: 700px;
-	width: 100%;
-	z-index: 0;
-}
-
-#content {
-	position: static;
-	top: 100px;
+	.background-box {
+		background-color: $theme-bg-dark-transparent;
+		height: 470px;
+		width: 100%;
+		z-index: 0;
+	}
 }
 
 #highlights {
@@ -304,6 +392,8 @@ section {
 
 	.content-desc {
 		line-height: 2em;
+		margin: 0 auto;
+		max-width: 990px;
 		padding-bottom: 2em;
 		padding-top: 2em;
 	}
@@ -312,9 +402,23 @@ section {
 		margin: auto;
 		padding-top: 2em;
 
-		ul {
-			margin: 0 auto;
-			padding: 0;
+		a {
+			color: #FFF;
+			font-family: 'gotham_boldregular', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
+			font-size: 1em;
+			height: auto;
+			margin-top: 5%;
+			position: absolute;
+			text-align: center;
+			text-shadow: 2px 2px $theme-bg-dark;
+			text-transform: uppercase;
+			width: 200px;
+		}
+
+		img {
+			border-radius: 10px;
+			height: 150px;
+			max-width: 200px;
 		}
 
 		li {
@@ -322,22 +426,9 @@ section {
 			padding: 1em 15px;
 		}
 
-		img {
-			border-radius: 10px;
-			height: auto;
-			max-width: 200px;
-		}
-
-		a {
-			color: #FFF;
-			font-family: "gotham_boldregular";
-			font-size: 1em;
-			height: auto;
-			margin-top: 5%;
-			position: absolute;
-			text-align: center;
-			text-transform: uppercase;
-			width: 200px;
+		ul {
+			margin: 0 auto;
+			padding: 0;
 		}
 	}
 }
@@ -346,37 +437,37 @@ section {
 	background: transparent;
 	border-width: 0;
 	color: $theme-base;
-	margin: 20% 10%;
+	font-size: 16px;
+	padding-top: 425px;
 	position: absolute;
-	width: 450px;
+	width: auto;
+	z-index: 5;
+
+	.portlet-topper {
+		visibility: hidden;
+	}
 
 	h2 {
-		content: "";
+		content: '';
 		display: none;
 	}
 
 	.breadcrumb {
 		background: transparent;
 		list-style: none;
-	}
 
-	.breadcrumb li a {
-		color: $theme-base;
-		font-size: 1.5em;
-	}
-
-	.breadcrumb > .active {
-		color: $theme-base;
-		font-size: 1.5em;
+		& > .active {
+			color: $theme-base;
+			font-size: 1em;
+		}
+		li a {
+			color: $theme-base;
+			font-size: 1em;
+		}
 	}
 }
 
-#portlet_com_liferay_login_web_portlet_LoginPortlet {
-}
-
-a.btn-btt {
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
+a.btn-back-to-top {
 	background: $theme-base;
 	border-radius: 50%;
 	bottom: 30px;
@@ -392,14 +483,14 @@ a.btn-btt {
 	z-index: 200;
 
 	&:after {
-		content: "\25B2";
+		content: '\25B2';
 		display: inline-block;
 		font-size: 28px;
 		height: 50px;
 		position: absolute;
+		right: 0;
 		text-align: center;
 		top: 0;
-		right: 0;
 		width: 50px;
 	}
 
@@ -409,19 +500,19 @@ a.btn-btt {
 	}
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 320px) {
 	.link-button {
 		padding: 8px 20px;
 	}
 }
 
-@media screen and (min-width: 650px) {
+@include media-query($screen-sm, null) {
 	.link-button {
 		padding: 10px 25px;
 	}
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 480px) {
 	h1 {
 		font-size: 1.4em;
 	}
@@ -444,41 +535,40 @@ a.btn-btt {
 	}
 }
 
-@media screen and (max-width: 991px) {
-	#banner a.jw-nav-bar-toggle {
-		background-color: transparent;
-		border-radius: 0;
-		border-width: 0;
-		color: $theme-base;
-		cursor: pointer;
-		display: block;
-		font-size: 3em;
-		line-height: 0.4;
-		margin: 0 15px 5% 15px;
-		padding: 0;
-		text-align: left;
+@include media-query(null, $screen-sm-max) {
+	#banner {
+		a.theme-nav-bar-toggle {
+			background-color: transparent;
+			border-radius: 0;
+			border-width: 0;
+			color: $theme-base;
+			cursor: pointer;
+			display: block;
+			font-size: 3em;
+			line-height: 0.4;
+			margin: 0 15px 5% 15px;
+			padding: 0;
+			text-align: left;
 
-		&:hover {
-			color: $theme-base-light
+			&:hover {
+				color: $theme-base-light
+			}
+		}
+
+		&.nav-bar-adjustment {
+				height: 80px;
+
+				#themeBanner {
+					padding: 30px 2% 0 2%;
+				}
+
+				#themeNavBar {
+					padding-top: 75px;
+				}
 		}
 	}
 
-	#banner.nav-bar-adjustment {
-			height: 80px;
-
-			#jw-banner {
-				padding: 30px 2% 0 2%;
-			}
-
-			#jw-nav-bar {
-				padding-top: 75px;
-			}
-	}
-
-	#jw-nav-bar {
-		-moz-transition: all 0.5s ease-in-out;
-		-o-transition: all 0.5s ease-in-out;
-		-webkit-transition: all 0.5s ease-in-out;
+	#themeNavBar {
 		background: $theme-bg-light-2;
 		bottom: 0;
 		box-sizing: border-box;
@@ -489,7 +579,9 @@ a.btn-btt {
 		position: fixed;
 		right: -250px;
 		top: 0;
-		transition: all 0.5s ease-in-out;
+
+		@include transition(all 0.5s ease-in-out);
+
 		width: 250px;
 		z-index: 200;
 
@@ -499,23 +591,50 @@ a.btn-btt {
 		}
 
 		li {
-			border-bottom: 1px solid $p-text-color;
-			margin-left: 0 !important;
-			margin-right: 0 !important;
+			border-bottom: 1px solid $default-color;
+			margin-left: 0;
+			margin-right: 0;
 			padding: 10px 0;
 			width: 100%;
 
+			.child-menu-toggle {
+				color: inherit;
+				cursor: pointer;
+				font-size: inherit;
+				height: 25px;
+				line-height: 1.3;
+				width: 25px;
+			}
+
 			li {
-				border-left: 1px solid $p-text-color;
+				border-left: 1px solid $default-color;
+			}
+
+			&:hover {
+				background: $theme-bg-light-1;
+			}
+
+			ul.child-menu {
+				background: $theme-bg-light-2;
+				display: none;
+				margin: 0;
+				padding-left: 5%;
+				padding-right: 0;
+				position: relative;
+				width: 100%;
+
+				& ~ ul {
+					display: none;
+				}
+			}
+
+			& > ul {
+				position: relative;
 			}
 		}
 
-		li:hover {
-			background: $theme-bg-light-1;
-		}
-
 		a {
-			color: $p-text-color;
+			color: $default-color;
 			padding: 0 10px;
 		}
 
@@ -523,36 +642,9 @@ a.btn-btt {
 			background: $theme-base-light;
 		}
 
-		.jw-nav-bar-toggle-close {
+		.theme-nav-bar-toggle-close {
 			font-size: 3em;
 			line-height: 0;
-		}
-
-		li ul.child-menu {
-			background: $theme-bg-light-2;
-			display: none;
-			margin: 0;
-			padding-left: 5%;
-			padding-right: 0;
-			position: relative;
-			width: 100%;
-
-			& ~ ul {
-				display: none;
-			}
-		}
-
-		li > ul {
-			position: relative;
-		}
-
-		li button.child-menu-toggle {
-			color: inherit;
-			cursor: pointer;
-			font-size: inherit;
-			height: 25px;
-			line-height: 1.3;
-			width: 25px;
 		}
 
 		ul.child-menu-open {
@@ -567,7 +659,7 @@ a.btn-btt {
 			transform: rotate(90deg);
 		}
 
-		&.menuOpen {
+		&.menu-open {
 			right: 0;
 		}
 	}
@@ -577,72 +669,95 @@ a.btn-btt {
 	}
 }
 
-@media screen and (min-width: 992px) {
+@include media-query($screen-md, null) {
 	#banner.nav-bar-adjustment {
 			top: 35px;
 	}
 
-	#navigation ul li:hover > .child-menu {
-		background-color: $theme-bg-dropdown;
-		display: block;
+	#navigation ul {
+		li.selected a:before {
+			width: 100%;
+		}
+
+		li:hover {
+			& > {
+				.child-menu {
+					background-color: $theme-bg-dropdown;
+					display: block;
+				}
+
+				a:before {
+					width: 100%;
+				}
+			}
+		}
 	}
 
-	#navigation ul li:hover > a:before {
-		width: 100%;
-	}
+	#navigation > ul {
+		& > li {
+			margin: 0 10px;
 
-	#navigation > ul > li > a:before {
-		background-color: $theme-base;
-		bottom: 0;
-		content: "";
-		height: 4px;
-		left: 50%;
-		margin: 0 auto;
-		position: absolute;
-		top: auto;
-		transform: translate(-50%, -48px);
-		transition: width 0.3s ease 0s;
-		width: 0;
-	}
+			& > a:before {
+				background-color: $theme-base;
+				bottom: 0;
+				content: '';
+				height: 4px;
+				left: 50%;
+				margin: 0 auto;
+				position: absolute;
+				top: auto;
+				transform: translate(-50%, -48px);
+				transition: width 0.3s ease 0s;
+				width: 0;
+			}
+		}
 
-	#banner #navigation > ul > li:hover > ul {
-		display: block;
-		width: auto;
-	}
+		& > li:hover > ul {
+			display: block;
+			width: auto;
+		}
 
-	#banner #navigation > ul ul > li:hover > ul {
-		display: block;
-		margin-left: 100%;
-		top: 0;
-		width: auto;
-		z-index: 200;
-	}
+		& ul > li:hover > ul {
+			display: block;
+			margin-left: 100%;
+			top: 0;
+			width: auto;
+			z-index: 200;
+		}
 
-	#banner #navigation > ul > li .child-menu li {
-		white-space: nowrap;
-	}
+		& > li .child-menu li {
+			white-space: nowrap;
+		}
 
-	#banner #navigation > ul > li > ul .child-menu {
-		margin-left: 50%;
-	}
-
-	#navigation ul li.selected a:before {
-		width: 100%;
+		& > li > ul .child-menu {
+			margin-left: 50%;
+		}
 	}
 
 	#navigation li button.child-menu-toggle {
 		display: none;
 	}
 
-	.grid-left {
+	.grid-text {
+		h3 {
+			font-size: 24px;
+		}
+
+		p {
+			font-size: 15px;
+			color: $default-color
+		}
+	}
+
+	.grid-column-1 {
 		text-align: right;
 	}
 
-	.grid-right {
+	.grid-column-2 {
 		text-align: left;
 	}
 
-	.jw-nav-bar-toggle {
+	.theme-nav-bar-toggle {
 		display: none;
 	}
 
@@ -654,18 +769,7 @@ a.btn-btt {
 		margin: 0 18%;
 	}
 
-	a.jw-nav-bar-toggle-close {
-		display: none;
-		visibility: hidden;
-	}
-
 	.portlet-content .theme-container {
 		margin: 0 2%;
 	}
 }
-
-/*	selector + sibling {
-		style top or left side
-	}
-
-*/
